--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebBuilds.loader.js";
+      var loaderUrl = buildUrl + "/New folder.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebBuilds.data",
-        frameworkUrl: buildUrl + "/WebBuilds.framework.js",
-        codeUrl: buildUrl + "/WebBuilds.wasm",
+        dataUrl: buildUrl + "/New folder.data",
+        frameworkUrl: buildUrl + "/New folder.framework.js",
+        codeUrl: buildUrl + "/New folder.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DigiTTLab",
         productName: "NN_Viz",
