all I did was change the video

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web Builds.loader.js";
+      var loaderUrl = buildUrl + "/tictactoe-frontend.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web Builds.data",
-        frameworkUrl: buildUrl + "/Web Builds.framework.js",
-        codeUrl: buildUrl + "/Web Builds.wasm",
+        dataUrl: buildUrl + "/tictactoe-frontend.data",
+        frameworkUrl: buildUrl + "/tictactoe-frontend.framework.js",
+        codeUrl: buildUrl + "/tictactoe-frontend.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DigiTTLab",
         productName: "NN_Viz",
